<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mainTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/detailTitle"
            android:ems="10"
            android:hint="@string/formTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/detailCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainTitleLayout"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/detailCountry"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/detailCity"
            android:ems="10"
            android:hint="@string/formCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/cityLayout"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/detailDescription"
            android:ems="10"
            android:hint="@string/formDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/detailVisited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/formVisited"
        android:layout_below="@id/descriptionLayout"
        />


    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/deleteTravelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/formDelete">
        </Button>
        <Button
            android:id="@+id/updateTravelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/formUpdate">
        </Button>
    </LinearLayout>

</RelativeLayout>
