<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mainTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mainTitle"
            android:ems="10"
            android:hint="@string/formTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainTitleLayout"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/country"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city"
            android:ems="10"
            android:hint="@string/formCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/cityLayout"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:ems="10"
            android:hint="@string/formDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formSave"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"

        />

</RelativeLayout>
